# subtitle-generator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
tools/: __init__.py  ffmpeg_utils.py  fs_utils.py  simple_tui.py  subtitle_gen.py
tui/: Cargo.toml
tui/src/: main.rs
