[project]
name = "subtitle-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "google-genai>=1.31.0",
    "socksio>=1.0.0",
    "textual>=6.1.0",
]

[project.scripts]
subtitle-gen = "tools.subtitle_gen:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
